Сделал сложное ДЗ к 7 уроку

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Hard</title>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
+
 <body>
 
 </body>
+
 </html>
