--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Hard</title>
+    <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
 
 <body>
+    <div class="wrap">
+        <p class="task1"></p>
+        <p class="task2"></p>
+    </div>
 
 </body>
 
